--- a/index.html
+++ b/index.html
@@ -211,6 +211,11 @@
         </div>
 
         <div class="row">
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
+            <div class="icon"><i class="bi bi-bar-chart"></i></div>
+            <h4 class="title"><a target="_blank" href="https://medium.com/@choudhary.raees/multiple-y-axis-graphs-with-plotly-f9abd7e861ed">Multiple Y-Axis Graphs with Plotly</a></h4>
+            <p class="description">When a single y-axis is npt sufficient to represent data adequately, Multiple Y-axis graphs come to the rescue</p>
+          </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="bi bi-card-checklist"></i></div>
             <h4 class="title"><a target="_blank" href="https://medium.com/@choudhary.raees/visualizing-part-of-a-whole-waffle-charts-with-background-image-ab0ad3fd8586">Visualize Part of a Whole</a></h4>
@@ -220,14 +225,8 @@
             <div class="icon"><i class="bi bi-briefcase"></i></div>
             <h4 class="title"><a target="_blank" href="https://medium.com/@choudhary.raees/a-recipe-for-visual-analytics-design-20895cc6f3de">Visual Analytics Recipe</a></h4>
             <p class="description">Designing effective visualizations that accurately convey information can be a complex task</p>
-          </div>
-          
-          <!-- <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
-            <div class="icon"><i class="bi bi-bar-chart"></i></div>
-            <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
-            <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
-          </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
+          </div> 
+          <!-- <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
             <div class="icon"><i class="bi bi-binoculars"></i></div>
             <h4 class="title"><a href="">Magni Dolores</a></h4>
             <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
