added link for photos

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
           <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Curriculum Vitae</span></a></li>
           <li><a href="#news"><i class="bx bx-news"></i> <span>News</span></a></li>
           <li><a href="#blogs"><i class="bx bx-server"></i>Blog</a></li>
+          <li><a href="photos.html"><i class="bx bx-photo-album"></i>Photos</a></li>
           <!-- <li><a href="#portfolio"><i class="bx bx-book-content"></i>Research</a></li> -->
           <!-- 
           <li><a href="#prospective"><i class="bx bx-envelope"></i> Working with Me</a></li> -->
