--- a/index.html
+++ b/index.html
@@ -140,9 +140,10 @@
           <h2>Publications</h2>
           <h6>Journal Papers</h6>
           <ul>
-          	  <li>[J.5] Khan KA, Dar SH, Fazilat S,  <strong>Raees, M</strong>, Ahmed A, Mir, AA. 2022. <a target="_blank" href="http://www.sci-int.com/pdf/637934373728498581.edited.pdf">An intelligent sentiment analysis system based on recent trends in machine learning</a>. In Science International, Issue 34.3.</li>
-              <li>[J.4] <strong>Muhammad Raees</strong> et al. 2021. <a target="_blank" href="https://doi.org/10.1155/2021/8835859">Context-Aware Services Using MANETs for Long-Distance Vehicular Systems: A Cognitive Agent-Based Model</a>. In Scientific Programming</li>
-              <li>[J.3] <strong>Muhammad Raees</strong>et al. 2020. <a target="_blank" href="https://www.proquest.com/docview/2442968004">Study of Software Quality Improvement through Reliability Metrics Models and Root Cause Analysis Program</a>. In International Journal of Computer Engineering and Information Technology. VOL. 12, NO. 5, May 2020, 42–47.</li>
+              <li>[J.6] <strong>Raees M</strong> et al. 2024. <a target="_blank" href="https://doi.org/10.1016/j.ijhcs.2024.103301">From explainable to interactive AI: A literature review on current trends in human-AI interaction</a>. In <a target="_blank" href="https://www.sciencedirect.com/journal/international-journal-of-human-computer-studies">International Journal of Human-Computer Studies</a>, May 2024 [<a target="_blank" href="assets/pdf/exp_inter.pdf">Pre-print</a>]</li>
+          	  <li>[J.5] Khan KA, Dar SH, Fazilat S,  <strong>Raees M</strong>, Ahmed A, Mir AA. 2022. <a target="_blank" href="http://www.sci-int.com/pdf/637934373728498581.edited.pdf">An intelligent sentiment analysis system based on recent trends in machine learning</a>. In Science International, Issue 34.3.</li>
+              <li>[J.4] <strong>Raees M</strong> et al. 2021. <a target="_blank" href="https://doi.org/10.1155/2021/8835859">Context-Aware Services Using MANETs for Long-Distance Vehicular Systems: A Cognitive Agent-Based Model</a>. In Scientific Programming</li>
+              <li>[J.3] <strong>Raees M</strong> et al. 2020. <a target="_blank" href="https://www.proquest.com/docview/2442968004">Study of Software Quality Improvement through Reliability Metrics Models and Root Cause Analysis Program</a>. In International Journal of Computer Engineering and Information Technology. VOL. 12, NO. 5, May 2020, 42–47.</li>
               <li>[J.2] Dar SH, Ahmed J, <strong>Raees M</strong>. 2016. <a target="_blank" href="https://pdfs.semanticscholar.org/56d9/099d0879e84b5783ffce6d44d2ca692d2810.pdf">Characterization of flexible wearable antenna based on rubber substrate</a>. In Int. J. Adv. Comput. Sci. Appl. IJACSA.</li>
               <li>[J.1] Riaz F, Shah SI. <strong>Raees M</strong>. 2013. <a target="_blank" href="https://www.researchgate.net/profile/Faisal-Riaz-2/publication/281676383_Lateral_pre-crash_sensing_and_avoidance_in_emotion_enabled_cognitive_agent_based_vehicle-2-vehicle_communication_system/links/599ebbf10f7e9b892bb90db5/Lateral-Pre-crash-Sensing-and-Avoidance-in-Emotion-Enabled-Cognitive-Agent-based-Vehicle-2-Vehicle-Communication-System.pdf">Lateral Pre-crash sensing and avoidance in emotion enabled cognitive agent-based vehicle-2-vehicle communication system</a>. In International Journal of Communication Networks and Information Security. 5.2 (127).</li>
           </ul>
@@ -183,6 +184,10 @@
           <h2>News</h2>
         </div>
         <table>
+          <tr>
+            <td><font color="#00b4d9">May 2024 </font></td>
+            <td>| Paper accepted at <a target="_blank" href="https://www.sciencedirect.com/journal/international-journal-of-human-computer-studies">International Journal of Human-Computer Studies</a></td>
+          </tr>
           <tr>
             <td><font color="#00b4d9">May 2023 </font></td>
             <td>| I defended my PhD Research Potential Assessment</td>
