--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
         </div>
 
       </div>
-      <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=NDni2_JurgCYw60ioklrb1sGO-4WwJsAqUV9cVswvMk&cl=ffffff&w=a"></script>
+      <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=fff1f1&w=400&t=tt&d=NDni2_JurgCYw60ioklrb1sGO-4WwJsAqUV9cVswvMk&co=87b9dc&ct=1b0202'></script>
     </section>
     <!-- End Services Section -->
    
