--- a/index.html
+++ b/index.html
@@ -237,7 +237,12 @@
           <p>I sometimes write on technical stuff, visit my <a target="_blank" href="https://medium.com/@choudhary.raees">Medium</a> profile to read more!</p>
         </div>
 
-        <div class="row">
+        <div class="row"> 
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
+            <div class="icon"><i class="bi bi-binoculars"></i></div>
+            <h4 class="title"><a target="_blank" href="https://medium.com/@muhammad_raees/unlocking-patterns-beginners-exploratory-data-analysis-f588b0b083dd">Exploratory Data Analysis</a></h4>
+            <p class="description">Unraveling the Story Within Your Dataset — Understand, clean, and prepare a dataset for modeling.</p>
+          </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
             <div class="icon"><i class="bi bi-bar-chart"></i></div>
             <h4 class="title"><a target="_blank" href="https://medium.com/@choudhary.raees/multiple-y-axis-graphs-with-plotly-f9abd7e861ed">Multiple Y-Axis Graphs with Plotly</a></h4>
@@ -252,13 +257,8 @@
             <div class="icon"><i class="bi bi-briefcase"></i></div>
             <h4 class="title"><a target="_blank" href="https://medium.com/@choudhary.raees/a-recipe-for-visual-analytics-design-20895cc6f3de">Visual Analytics Recipe</a></h4>
             <p class="description">Designing effective visualizations that accurately convey information can be a complex task</p>
-          </div> 
-          <!-- <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
-            <div class="icon"><i class="bi bi-binoculars"></i></div>
-            <h4 class="title"><a href="">Magni Dolores</a></h4>
-            <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
           </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
+          <!-- <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
             <div class="icon"><i class="bi bi-brightness-high"></i></div>
             <h4 class="title"><a href="">Nemo Enim</a></h4>
             <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
