--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <a target="_blank" href="https://scholar.google.com/citations?user=46ck0d4AAAAJ&hl=en" class="google"><i class="bx bxl-google"></i></a>
           <a target="_blank" href="https://www.linkedin.com/in/muhammad-raees-b6289954" class="linkedin"><i class="bx bxl-linkedin"></i></a>
           <a target="_blank" href="https://github.com/raeeschaudhary" class="github"><i class="bx bxl-github"></i></a>
-          <a href="mailto:mr2714@rit.edu" class="email"><i class="bx bx-envelope"></i></a>
+          <a href="mailto:mraees@rit.edu" class="email"><i class="bx bx-envelope"></i></a>
         </div>
       </div>
 
