--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
           </ul>
           <h6>Other Papers</h6>
           <ul>
-          	  <li>[A.2] Ahmed A, Abbasi, KM,<strong>Raees M</strong>. <a target="_blank" href="assets/pdf/transits.pdf">Context-aware Advertisement in Rapid Transit Systems</a>. Accepted In International Conference on Computing and Mathematical Sciences IBA Sukkur, Pakistan.</li>
+          	  <li>[A.2] Ahmed A, <strong>Raees M</strong>. <a target="_blank" href="">Context-aware Advertisement Modeling and Applications in Rapid Transit Systems</a>. Accepted In International Conference on Computing and Mathematical Sciences IBA Sukkur, Pakistan.</li>
               <li>[A.1] <strong>Raees M</strong>, Ahmed A. <a target="_blank" href="https://arxiv.org/pdf/2409.02434">Context-Aware Agent-based Model for Smart Long Distance Transport System</a>. Accepted In International Conference on Computing and Mathematical Sciences IBA Sukkur, Pakistan.</li>
           </ul>
         </div>
