--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
       <nav class="nav-menu">
         <ul>
-          <li class="active"><a href="#hero"><i class="bx bx-home"></i> <span>Home</span></a></li>
+          <li class="active"><a href="#home"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#pubs"><i class="bx bx-book-content"></i> <span>Publications</span></a></li>
           <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Curriculum Vitae</span></a></li>
@@ -89,17 +89,34 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
+  <!-- <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Muhammad Raees</h1>
       <p><span class="typed" data-typed-items="PhD Student at RIT, Human-Computer Interaction, Visual Analytics, Human-ML Interaction"></span></p>
     </div>
-  </section><!-- End Hero -->
+  </section> -->
+  <!-- End Hero -->
 
   <main id="main">
 
+     <!-- ======= Top Section ======= -->
+     <section id="home", class="about" style="background-color: #C53211;">
+      <div class="container">
+          <img src="assets/img/hero-gif.gif" alt="Dynamic GIF" class="dynamic-gif">
+        <div class="content">
+      <div class="hero-container" data-aos="fade-in" style="color: white;">
+        <p><span class="typed" data-typed-items="PhD Student at RIT, Human-Computer Interaction, Visual Analytics, Human-ML Interaction"></span></p>
+      </div>
+          </div>
+        <!-- </div> -->
+
+      </div>
+    </section>
+    <!-- End Top Section -->
+
+
     <!-- ======= About Section ======= -->
-    <section id="about" class="about">
+    <section id="about" class="about section-bg">
       <div class="container">
 
         <div class="section-title">
@@ -133,7 +150,7 @@
     <!-- End About Section -->
 
     <!-- ======= pubs Section ======= -->
-    <section id="pubs" class="pubs section-bg">
+    <section id="pubs" class="pubs">
       <div class="container">
 
         <div class="section-title">
@@ -184,6 +201,10 @@
           <h2>News</h2>
         </div>
         <table>
+          <tr></tr>
+            <td><font color="#00b4d9">Aug 2024 </font></td>
+            <td>| I am joining <a target="_blank" href="https://www.rit.edu/nrtai/">NSF AWARE-AI Program</a> as a Research Trainee</td>
+          </tr>
           <tr>
             <td><font color="#00b4d9">May 2024 </font></td>
             <td>| Paper accepted at <a target="_blank" href="https://www.sciencedirect.com/journal/international-journal-of-human-computer-studies">International Journal of Human-Computer Studies</a></td>
@@ -218,10 +239,10 @@
             <td>| Paper accepted at <a target="_blank" href="https://www.hindawi.com/journals/sp/">Scientific Programming</a></td>
           </tr>
 
-          <tr>
+          <!-- <tr>
             <td><font color="#00b4d9">Jul 2019</font> </td>
             <td>| I'm working at <a target="_blank" href="https://must.edu.pk">Mirpur University of Science and Technology</a> Pakistan</td>
-          </tr>
+          </tr> -->
         </table>
       </div>
     </section>
