--- a/index.html
+++ b/index.html
@@ -169,11 +169,11 @@
               <li>[C.2] <strong>Muhammad Raees</strong> et al. 2023. <a target="_blank" href="https://dl.acm.org/doi/pdf/10.1145/3544549.3585788">Four Challenges for IML Designers: Lessons of an Interactive Customer Segmentation Prototype in a Global Manufacturing Company</a>. In Extended Abstracts of the 2023 CHI Conference on Human Factors in Computing Systems (CHI EA 23). <i>(32% acceptance rate)</i></li>
               <li>[C.1] Manzoor S, Ali N, <strong>Raees, M</strong>, 2022. <a target="_blank" href="https://ceur-ws.org/Vol-3266/paper2.pdf">Ancient coin classification based on recent trends of deep learning</a>. In VIPERC2022: 1st International Virtual Conference on Visual Pattern Extraction and Recognition for Cultural Heritage Understanding. <i>(41% acceptance rate)</i></li>
           </ul>
-          <h6>Other Papers</h6>
+          <!-- <h6>Other Papers</h6>
           <ul>
           	  <li>[A.2] Ahmed A, <strong>Raees M</strong>. <a target="_blank" href="">Context-aware Advertisement Modeling and Applications in Rapid Transit Systems</a>. Accepted In International Conference on Computing and Mathematical Sciences IBA Sukkur, Pakistan.</li>
               <li>[A.1] <strong>Raees M</strong>, Ahmed A. <a target="_blank" href="https://arxiv.org/pdf/2409.02434">Context-Aware Agent-based Model for Smart Long Distance Transport System</a>. Accepted In International Conference on Computing and Mathematical Sciences IBA Sukkur, Pakistan.</li>
-          </ul>
+          </ul> -->
         </div>
 
       </div>
