updated about me

--- a/index.html
+++ b/index.html
@@ -132,16 +132,16 @@
           <p>
             My research focus includes designing and evaluating visual analytics tools with user-centered design in work settings.
             My work advocates for coordinated machine learning experience for real-world decision-making processes building upon core principles of Human-Computer Interaction (HCI).
-            I also investigate and evaluate the UX impact of Human-AI interactions.
+            I also investigate and evaluate the UX of Human-AI Interactions.
           </p> 
         <p>
-          I obtained my masters in software engineering from <a href="https://www.bahria.edu.pk/buic" 
-          target="_blank">Bahria University Islamabad</a> with a gold medal. I am experienced in software development, data science, and visual analytics. I also worked at <a 
-          href="https://must.edu.pk/" target="_blank">Mirpur University of Science and Technology</a> as a Lecturer.
+          I have <a href="https://www.bahria.edu.pk/buic" target="_blank">masters</a> and <a href="https://must.edu.pk/software-engineering/" target="_blank">bachelors</a> in software engineering. 
+          I am experienced in software development, data science, and visual analytics. 
         </p>
+        <p>I am from a beautiful place on earth <a href="https://maps.app.goo.gl/6MywPaygZbQXoDLe8" target="_blank">Mirpur Kashmir</a></p>
         </div>
         <div class="content">
-          <p>You might find interesting to read some of my <a href="#pubs">publications</a>, or reach out to me by LinkedIn or email.</p>
+          <p>You might find interesting to read some of my <a href="#pubs">publications</a>, or reach out to me by <a target="_blank" href="https://www.linkedin.com/in/muhammad-raees-b6289954">LinkedIn</a> or email.</p>
           </div>
         <!-- </div> -->
 
