--- a/index.html
+++ b/index.html
@@ -201,7 +201,11 @@
           <h2>News</h2>
         </div>
         <table>
-          <tr></tr>
+          <tr>
+            <td><font color="#00b4d9">Dec 2024 </font></td>
+            <td>| Case Study Paper accepted at <a target="_blank" href="https://chi2025.acm.org/">ACM Human Factors in Computing Systems (CHI'25)</a></td>
+          </tr>
+          <tr>
             <td><font color="#00b4d9">Aug 2024 </font></td>
             <td>| I am joining <a target="_blank" href="https://www.rit.edu/nrtai/">NSF AWARE-AI Program</a> as a Research Trainee</td>
           </tr>
