--- a/index.html
+++ b/index.html
@@ -122,23 +122,22 @@
         <div class="section-title">
           <h2>About</h2>
           <p>
-            I am a PhD Candidate in <a target="_blank" href="https://www.rit.edu/study/computing-and-information-sciences-phd">GCCIS</a> at <a 
+            I am a PhD Student in <a target="_blank" href="https://www.rit.edu/study/computing-and-information-sciences-phd">GCCIS</a> at <a 
             href="https://www.rit.edu" target="_blank">Rochester Institute of Technology</a> (RIT) and work at <a 
             target="_blank" href="https://www.rit.edu/computing/sappi" >Sappi-RIT Digital Innovation Lab</a>. 
             I am advised by <a target="_blank" href="https://www.rit.edu/directory/kxpigm-konstantinos-papangelis">Konstantinos Papangelis</a> 
-          who is also a lab director at <a target="_blank" href="https://www.rit.edu/nianticgeogameslab/">Niantic x RIT Geo Games and Media Research Lab</a> 
-          and <a target="_blank" href="http://khan.gr/">Vassilis-Javed Khan</a> who is UX scientist at 
+          who is also a lab director at <a target="_blank" href="https://www.rit.edu/nianticgeogameslab/">Niantic x Research Lab</a> 
+          and <a target="_blank" href="http://khan.gr/">Vassilis-Javed Khan</a> who is UX Lead at 
           <a target="_blank" href="https://www.sappi.com/">Sappi</a> Belgium.
           <p>
-            My research focus includes designing and evaluating visual analytics tools with user-centered design in work settings.
-            My work advocates for coordinated machine learning experience for real-world decision-making processes building upon core principles of Human-Computer Interaction (HCI).
-            I also investigate and evaluate the UX of Human-AI Interactions.
+            My research focuses on designing and evaluating visual analytics tools with user-centered design in the business domain.
+            My work advocates for coordinated machine learning experience for data-driven decision-making processes, building upon core principles of Human-AI Interaction.
           </p> 
         <p>
           I have <a href="https://www.bahria.edu.pk/buic" target="_blank">masters</a> and <a href="https://must.edu.pk/software-engineering/" target="_blank">bachelors</a> in software engineering. 
           I am experienced in software development, data science, and visual analytics. 
         </p>
-        <p>I am from a beautiful place on earth <a href="https://maps.app.goo.gl/6MywPaygZbQXoDLe8" target="_blank">Mirpur Kashmir</a></p>
+        <p>I come from a beautifufl place, <a href="https://maps.app.goo.gl/6MywPaygZbQXoDLe8" target="_blank">Mirpur Kashmir</a></p>
         </div>
         <div class="content">
           <p>You might find interesting to read some of my <a href="#pubs">publications</a>, or reach out to me by <a target="_blank" href="https://www.linkedin.com/in/muhammad-raees-b6289954">LinkedIn</a> or email.</p>
