--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
   <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
   <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
@@ -61,10 +63,14 @@
         <div class="social-links mt-3 text-center">
           <!-- <a href="https://twitter.com/ytlity" class="twitter"><i class="bx bxl-twitter"></i></a> -->
           <!-- <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a> -->
-          <a target="_blank" href="https://scholar.google.com/citations?user=46ck0d4AAAAJ&hl=en" class="google"><i class="bx bxl-google"></i></a>
-          <a target="_blank" href="https://www.linkedin.com/in/muhammad-raees-b6289954" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-          <a target="_blank" href="https://github.com/raeeschaudhary" class="github"><i class="bx bxl-github"></i></a>
-          <a href="mailto:mraees@mail.rit.edu" class="email"><i class="bx bx-envelope"></i></a>
+          <!-- <a target="_blank" href="https://scholar.google.com/citations?user=46ck0d4AAAAJ&hl=en"><i class="fa-brands fa-google-scholar" style="color: #FFD43B;"></i></a> -->
+          <a target="_blank" href="https://scholar.google.com/citations?user=46ck0d4AAAAJ&hl=en" class="google">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 700 700"><path fill="#ffffff" d="M390.9 298.5c0 0 0 .1 .1 .1c9.2 19.4 14.4 41.1 14.4 64C405.3 445.1 338.5 512 256 512s-149.3-66.9-149.3-149.3c0-22.9 5.2-44.6 14.4-64h0c1.7-3.6 3.6-7.2 5.6-10.7c4.4-7.6 9.4-14.7 15-21.3c27.4-32.6 68.5-53.3 114.4-53.3c33.6 0 64.6 11.1 89.6 29.9c9.1 6.9 17.4 14.7 24.8 23.5c5.6 6.6 10.6 13.8 15 21.3c2 3.4 3.8 7 5.5 10.5zm26.4-18.8c-30.1-58.4-91-98.4-161.3-98.4s-131.2 40-161.3 98.4L0 202.7 256 0 512 202.7l-94.7 77.1z"/></svg>
+          </a>
+          <a target="_blank" href="https://www.linkedin.com/in/muhammad-raees-b6289954" class="linkedin"><i class="fab fa-linkedin"></i></a>
+          <a target="_blank" href="https://github.com/raeeschaudhary" class="github"><i class="fab fa-github"></i></a>
+          <a href="mailto:mraees@mail.rit.edu" class="email"><i class="fas fa-envelope"></i></a>
+          <a href="assets/pdf/MuhammadRaees_cv.pdf" class="cv">CV</a>
         </div>
       </div>
 
@@ -181,7 +187,7 @@
     
 
     <!-- ======= Resume Section ======= -->
-    <section id="resume" class="resume">
+    <!-- <section id="resume" class="resume">
       <div class="container">
         <div class="section-title">
           <h2>Curriculum Vitae</h2>
@@ -190,7 +196,7 @@
           </iframe>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- End Resume Section -->
 
     <!-- ======= News Section ======= -->
