--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <li class="active"><a href="#home"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#pubs"><i class="bx bx-book-content"></i> <span>Publications</span></a></li>
-          <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Curriculum Vitae</span></a></li>
+          <!-- <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Curriculum Vitae</span></a></li> -->
           <li><a href="#news"><i class="bx bx-news"></i> <span>News</span></a></li>
           <li><a href="#blogs"><i class="bx bx-server"></i>Blog</a></li>
           <li><a href="photos.html"><i class="bx bx-photo-album"></i>Photos</a></li>
@@ -110,12 +110,10 @@
       <div class="container">
           <img src="assets/img/hero-gif.gif" alt="Dynamic GIF" class="dynamic-gif">
         <div class="content">
-      <div class="hero-container" data-aos="fade-in" style="color: white;">
-        <p><span class="typed" data-typed-items="PhD Student at RIT, Human-Computer Interaction, Visual Analytics, Human-ML Interaction"></span></p>
-      </div>
-          </div>
-        <!-- </div> -->
-
+            <div class="hero-container" data-aos="fade-in" style="color: white;">
+              <p><span class="typed" data-typed-items="PhD Student at RIT, Human-Computer Interaction, Visual Analytics, Human-ML Interaction"></span></p>
+            </div>
+        </div>
       </div>
     </section>
     <!-- End Top Section -->
@@ -160,25 +158,16 @@
 
         <div class="section-title">
           <h2>Publications</h2>
-          <h6>Journal Papers</h6>
           <ul>
               <li>[J.6] <strong>Raees M</strong> et al. 2024. <a target="_blank" href="https://doi.org/10.1016/j.ijhcs.2024.103301">From explainable to interactive AI: A literature review on current trends in human-AI interaction</a>. In <a target="_blank" href="https://www.sciencedirect.com/journal/international-journal-of-human-computer-studies">International Journal of Human-Computer Studies</a>. [<a target="_blank" href="assets/pdf/exp_inter.pdf">Pre-print</a>]</li>
-          	  <li>[J.5] Khan KA, Dar SH, Fazilat S,  <strong>Raees M</strong>, Ahmed A, Mir AA. 2022. <a target="_blank" href="http://www.sci-int.com/pdf/637934373728498581.edited.pdf">An intelligent sentiment analysis system based on recent trends in machine learning</a>. In Science International, Issue 34.3.</li>
+              <li>[C.2] <strong>Muhammad Raees</strong> et al. 2023. <a target="_blank" href="https://dl.acm.org/doi/pdf/10.1145/3544549.3585788">Four Challenges for IML Designers: Lessons of an Interactive Customer Segmentation Prototype in a Global Manufacturing Company</a>. In Extended Abstracts of the 2023 CHI Conference on Human Factors in Computing Systems (CHI EA 23). <i>(32% acceptance rate)</i></li>
+              <li>[C.1] Manzoor S, Ali N, <strong>Raees, M</strong>, 2022. <a target="_blank" href="https://ceur-ws.org/Vol-3266/paper2.pdf">Ancient coin classification based on recent trends of deep learning</a>. In VIPERC2022: 1st International Virtual Conference on Visual Pattern Extraction and Recognition for Cultural Heritage Understanding. <i>(41% acceptance rate)</i></li>
+              <li>[J.5] Khan KA, Dar SH, Fazilat S,  <strong>Raees M</strong>, Ahmed A, Mir AA. 2022. <a target="_blank" href="http://www.sci-int.com/pdf/637934373728498581.edited.pdf">An intelligent sentiment analysis system based on recent trends in machine learning</a>. In Science International, Issue 34.3.</li>
               <li>[J.4] <strong>Raees M</strong> et al. 2021. <a target="_blank" href="https://doi.org/10.1155/2021/8835859">Context-Aware Services Using MANETs for Long-Distance Vehicular Systems: A Cognitive Agent-Based Model</a>. In Scientific Programming</li>
               <li>[J.3] <strong>Raees M</strong> et al. 2020. <a target="_blank" href="https://www.proquest.com/docview/2442968004">Study of Software Quality Improvement through Reliability Metrics Models and Root Cause Analysis Program</a>. In International Journal of Computer Engineering and Information Technology. VOL. 12, NO. 5, May 2020, 42–47.</li>
               <li>[J.2] Dar SH, Ahmed J, <strong>Raees M</strong>. 2016. <a target="_blank" href="https://pdfs.semanticscholar.org/56d9/099d0879e84b5783ffce6d44d2ca692d2810.pdf">Characterization of flexible wearable antenna based on rubber substrate</a>. In Int. J. Adv. Comput. Sci. Appl. IJACSA.</li>
               <li>[J.1] Riaz F, Shah SI. <strong>Raees M</strong>. 2013. <a target="_blank" href="https://www.researchgate.net/profile/Faisal-Riaz-2/publication/281676383_Lateral_pre-crash_sensing_and_avoidance_in_emotion_enabled_cognitive_agent_based_vehicle-2-vehicle_communication_system/links/599ebbf10f7e9b892bb90db5/Lateral-Pre-crash-Sensing-and-Avoidance-in-Emotion-Enabled-Cognitive-Agent-based-Vehicle-2-Vehicle-Communication-System.pdf">Lateral Pre-crash sensing and avoidance in emotion enabled cognitive agent-based vehicle-2-vehicle communication system</a>. In International Journal of Communication Networks and Information Security. 5.2 (127).</li>
           </ul>
-          <h6>Conference Papers</h6>
-          <ul>
-              <li>[C.2] <strong>Muhammad Raees</strong> et al. 2023. <a target="_blank" href="https://dl.acm.org/doi/pdf/10.1145/3544549.3585788">Four Challenges for IML Designers: Lessons of an Interactive Customer Segmentation Prototype in a Global Manufacturing Company</a>. In Extended Abstracts of the 2023 CHI Conference on Human Factors in Computing Systems (CHI EA 23). <i>(32% acceptance rate)</i></li>
-              <li>[C.1] Manzoor S, Ali N, <strong>Raees, M</strong>, 2022. <a target="_blank" href="https://ceur-ws.org/Vol-3266/paper2.pdf">Ancient coin classification based on recent trends of deep learning</a>. In VIPERC2022: 1st International Virtual Conference on Visual Pattern Extraction and Recognition for Cultural Heritage Understanding. <i>(41% acceptance rate)</i></li>
-          </ul>
-          <!-- <h6>Other Papers</h6>
-          <ul>
-          	  <li>[A.2] Ahmed A, <strong>Raees M</strong>. <a target="_blank" href="">Context-aware Advertisement Modeling and Applications in Rapid Transit Systems</a>. Accepted In International Conference on Computing and Mathematical Sciences IBA Sukkur, Pakistan.</li>
-              <li>[A.1] <strong>Raees M</strong>, Ahmed A. <a target="_blank" href="https://arxiv.org/pdf/2409.02434">Context-Aware Agent-based Model for Smart Long Distance Transport System</a>. Accepted In International Conference on Computing and Mathematical Sciences IBA Sukkur, Pakistan.</li>
-          </ul> -->
         </div>
 
       </div>
