updated news for umap paper and some photos

--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-
     gtag('config', 'UA-48487621-4');
   </script>
-
 
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -22,7 +20,7 @@
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/favicon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -40,12 +38,6 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: iPortfolio - v1.3.0
-  * Template URL: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -111,7 +103,7 @@
           <img src="assets/img/hero-gif.gif" alt="Dynamic GIF" class="dynamic-gif">
         <div class="content">
             <div class="hero-container" data-aos="fade-in" style="color: white;">
-              <p><span class="typed" data-typed-items="PhD Student at RIT, Human-Computer Interaction, Visual Analytics, Human-ML Interaction"></span></p>
+              <p><span class="typed" data-typed-items="PhD Student at RIT, Human-Computer Interaction, Visual Analytics, Human-AI Interaction"></span></p>
             </div>
         </div>
       </div>
@@ -141,7 +133,7 @@
           I have <a href="https://www.bahria.edu.pk/buic" target="_blank">masters</a> and <a href="https://must.edu.pk/software-engineering/" target="_blank">bachelors</a> in software engineering. 
           I am experienced in software development, data science, and visual analytics. 
         </p>
-        <p>I come from a beautifufl place, <a href="https://maps.app.goo.gl/6MywPaygZbQXoDLe8" target="_blank">Mirpur Kashmir</a></p>
+        <p>I am from beautiful <a href="https://maps.app.goo.gl/6MywPaygZbQXoDLe8" target="_blank">Mirpur Kashmir</a>.</p>
         </div>
         <div class="content">
           <p>You might find interesting to read some of my <a href="#pubs">publications</a>, or reach out to me by <a target="_blank" href="https://www.linkedin.com/in/muhammad-raees-b6289954">LinkedIn</a> or email.</p>
@@ -159,14 +151,15 @@
         <div class="section-title">
           <h2>Publications</h2>
           <ul>
-              <li>[J.6] <strong>Raees M</strong> et al. 2024. <a target="_blank" href="https://doi.org/10.1016/j.ijhcs.2024.103301">From explainable to interactive AI: A literature review on current trends in human-AI interaction</a>. In <a target="_blank" href="https://www.sciencedirect.com/journal/international-journal-of-human-computer-studies">International Journal of Human-Computer Studies</a>. [<a target="_blank" href="assets/pdf/exp_inter.pdf">Pre-print</a>]</li>
-              <li>[C.2] <strong>Muhammad Raees</strong> et al. 2023. <a target="_blank" href="https://dl.acm.org/doi/pdf/10.1145/3544549.3585788">Four Challenges for IML Designers: Lessons of an Interactive Customer Segmentation Prototype in a Global Manufacturing Company</a>. In Extended Abstracts of the 2023 CHI Conference on Human Factors in Computing Systems (CHI EA 23). <i>(32% acceptance rate)</i></li>
-              <li>[C.1] Manzoor S, Ali N, <strong>Raees, M</strong>, 2022. <a target="_blank" href="https://ceur-ws.org/Vol-3266/paper2.pdf">Ancient coin classification based on recent trends of deep learning</a>. In VIPERC2022: 1st International Virtual Conference on Visual Pattern Extraction and Recognition for Cultural Heritage Understanding. <i>(41% acceptance rate)</i></li>
-              <li>[J.5] Khan KA, Dar SH, Fazilat S,  <strong>Raees M</strong>, Ahmed A, Mir AA. 2022. <a target="_blank" href="http://www.sci-int.com/pdf/637934373728498581.edited.pdf">An intelligent sentiment analysis system based on recent trends in machine learning</a>. In Science International, Issue 34.3.</li>
-              <li>[J.4] <strong>Raees M</strong> et al. 2021. <a target="_blank" href="https://doi.org/10.1155/2021/8835859">Context-Aware Services Using MANETs for Long-Distance Vehicular Systems: A Cognitive Agent-Based Model</a>. In Scientific Programming</li>
-              <li>[J.3] <strong>Raees M</strong> et al. 2020. <a target="_blank" href="https://www.proquest.com/docview/2442968004">Study of Software Quality Improvement through Reliability Metrics Models and Root Cause Analysis Program</a>. In International Journal of Computer Engineering and Information Technology. VOL. 12, NO. 5, May 2020, 42–47.</li>
-              <li>[J.2] Dar SH, Ahmed J, <strong>Raees M</strong>. 2016. <a target="_blank" href="https://pdfs.semanticscholar.org/56d9/099d0879e84b5783ffce6d44d2ca692d2810.pdf">Characterization of flexible wearable antenna based on rubber substrate</a>. In Int. J. Adv. Comput. Sci. Appl. IJACSA.</li>
-              <li>[J.1] Riaz F, Shah SI. <strong>Raees M</strong>. 2013. <a target="_blank" href="https://www.researchgate.net/profile/Faisal-Riaz-2/publication/281676383_Lateral_pre-crash_sensing_and_avoidance_in_emotion_enabled_cognitive_agent_based_vehicle-2-vehicle_communication_system/links/599ebbf10f7e9b892bb90db5/Lateral-Pre-crash-Sensing-and-Avoidance-in-Emotion-Enabled-Cognitive-Agent-based-Vehicle-2-Vehicle-Communication-System.pdf">Lateral Pre-crash sensing and avoidance in emotion enabled cognitive agent-based vehicle-2-vehicle communication system</a>. In International Journal of Communication Networks and Information Security. 5.2 (127).</li>
+              <li>[C.3] <strong>Muhammad Raees,</strong> Vassilis-Javed Khan, and Konstantinos Papangelis, 2025. <a target="_blank" href="https://doi.org/10.1145/3706599.3706687">"UX Challenges in Implementing an Interactive B2B Customer Segmentation Tool"</a>. In Extended Abstracts of the 2025 CHI Conference on Human Factors in Computing Systems (CHI EA 25). <i>(30% acceptance rate)</i></li>
+              <li>[J.6] <strong>Muhammad Raees,</strong> Inge Meijerink, Ioanna Lykourentzou, Vassilis-Javed Khan, and Konstantinos Papangelis, 2024. <a target="_blank" href="https://doi.org/10.1016/j.ijhcs.2024.103301">"From explainable to interactive AI: A literature review on current trends in human-AI interaction"</a>. In <a target="_blank" href="https://www.sciencedirect.com/journal/international-journal-of-human-computer-studies">International Journal of Human-Computer Studies</a>. [<a target="_blank" href="assets/pdf/exp_inter.pdf">Pre-print</a>]</li>
+              <li>[C.2] <strong>Muhammad Raees,</strong> Vassilis-Javed Khan, and Konstantinos Papangelis, 2023. <a target="_blank" href="https://dl.acm.org/doi/pdf/10.1145/3544549.3585788">"Four Challenges for IML Designers: Lessons of an Interactive Customer Segmentation Prototype in a Global Manufacturing Company"</a>. In Extended Abstracts of the 2023 CHI Conference on Human Factors in Computing Systems (CHI EA 23). <i>(32% acceptance rate)</i></li>
+              <li>[C.1] Sehrish Manzoor, Nouman Ali, <strong>Muhammad Raees,</strong>  Khan Awais Khan, Muhammad Usama Ayub, Afzal Ahmed, 2022. Manzoor S, Ali N, <strong>Raees, M</strong>, 2022. <a target="_blank" href="https://ceur-ws.org/Vol-3266/paper2.pdf">"Ancient coin classification based on recent trends of deep learning"</a>. In VIPERC2022: 1st International Virtual Conference on Visual Pattern Extraction and Recognition for Cultural Heritage Understanding. <i>(41% acceptance rate)</i></li>
+              <li>[J.5] KA Khan, SH Dar, S Fazilat, <strong>M Raees,</strong>, S Manzoor, MU Ayub, A Ahmed, 2022. <a target="_blank" href="http://www.sci-int.com/pdf/637934373728498581.edited.pdf">"An intelligent sentiment analysis system based on recent trends in machine learning"</a>. In Science International, Issue 34.3.</li>
+              <li>[J.4] <strong>Muhammad Raees,</strong> Tamim Ahmed Khan, Khurrum Mustafa Abbasi, Afzal Ahmed, Samina Fazilat, Inaam Ahmed, 2021. <a target="_blank" href="https://doi.org/10.1155/2021/8835859">"Context-Aware Services Using MANETs for Long-Distance Vehicular Systems: A Cognitive Agent-Based Model"</a>. In Scientific Programming</li>
+              <li>[J.3] <strong>Muhammad Raees,</strong> 2020. <a target="_blank" href="https://www.proquest.com/docview/2442968004">"Study of Software Quality Improvement through Reliability Metrics Models and Root Cause Analysis Program"</a>. In International Journal of Computer Engineering and Information Technology. VOL. 12, NO. 5, May 2020, 42–47.</li>
+              <li>[J.2] Saadat Hanif Dar, Jameel Ahmed, <strong>Muhammad Raees,</strong> 2016. <a target="_blank" href="https://pdfs.semanticscholar.org/56d9/099d0879e84b5783ffce6d44d2ca692d2810.pdf">"Characterization of flexible wearable antenna based on rubber substrate"</a>. In Int. J. Adv. Comput. Sci. Appl. IJACSA.</li>
+              <li>[J.1] Faisal Riaz, Syed Ismail Shah, <strong>Muhammad Raees,</strong> Imran Shafi, Arslan Iqbal, 2013. <a target="_blank" href="https://www.researchgate.net/profile/Faisal-Riaz-2/publication/281676383_Lateral_pre-crash_sensing_and_avoidance_in_emotion_enabled_cognitive_agent_based_vehicle-2-vehicle_communication_system/links/599ebbf10f7e9b892bb90db5/Lateral-Pre-crash-Sensing-and-Avoidance-in-Emotion-Enabled-Cognitive-Agent-based-Vehicle-2-Vehicle-Communication-System.pdf">"Lateral Pre-crash sensing and avoidance in emotion enabled cognitive agent-based vehicle-2-vehicle communication system"</a>. In International Journal of Communication Networks and Information Security. 5.2 (127).</li>
           </ul>
         </div>
 
@@ -195,6 +188,10 @@
           <h2>News</h2>
         </div>
         <table>
+          <tr>
+            <td><font color="#00b4d9">Apr 2025 </font></td>
+            <td>| Paper (and 2 workshop papers) accepted at <a target="_blank" href="https://www.um.org/umap2025/">ACM International Conference on User Modeling, Adaptation and Personalization (UMAP'25)</a></td>
+          </tr>
           <tr>
             <td><font color="#00b4d9">Dec 2024 </font></td>
             <td>| Case Study Paper accepted at <a target="_blank" href="https://chi2025.acm.org/">ACM Human Factors in Computing Systems (CHI'25)</a></td>
