--- a/photos.html
+++ b/photos.html
@@ -216,14 +216,15 @@ input:checked + input ~ input:before {
 
 
           <i class="slider_buttons">
-            <input checked type="radio" name="s" style="background-image: url('assets/pastphotos/p2.jpg');" title="RIT 2023">
-            <input type="radio" name="s" style="background-image: url('assets/pastphotos/p3.jpg');" title="Letchworth NY 2023">
-            <input type="radio" name="s" style="background-image: url('assets/pastphotos/p4.jpg');" title="Rochester NY 2023">
-            <input type="radio" name="s" style="background-image: url('assets/pastphotos/p1.jpg');" title="Niagra Falls NY 2023">
-            <input type="radio" name="s" style="background-image: url('assets/pastphotos/p10.jpg');" title="Rochester NY 2022">
-            <input type="radio" name="s" style="background-image: url('assets/pastphotos/p6.jpg');" title="Muzzafarabad PK 2021">
-            <input type="radio" name="s" style="background-image: url('assets/pastphotos/p5.jpg');" title="Mirpur PK 2020">
-            <input type="radio" name="s" style="background-image: url('assets/pastphotos/p8.jpg');" title="Jhelum PK 2019">
+            <input checked type="radio" name="s" style="background-image: url('assets/pastphotos/p09.jpg');" title="Castle Combe UK 2025">
+            <input checked type="radio" name="s" style="background-image: url('assets/pastphotos/p08.jpg');" title="RHS GLOW UK 2024">
+            <input checked type="radio" name="s" style="background-image: url('assets/pastphotos/p07.jpg');" title="RIT 2024">
+            <input type="radio" name="s" style="background-image: url('assets/pastphotos/p06.jpg');" title="Letchworth NY 2023">
+            <input type="radio" name="s" style="background-image: url('assets/pastphotos/p05.jpg');" title="Rochester NY 2023">
+            <input type="radio" name="s" style="background-image: url('assets/pastphotos/p04.jpg');" title="Niagra Falls NY 2023">
+            <input type="radio" name="s" style="background-image: url('assets/pastphotos/p03.jpg');" title="Rochester NY 2022">
+            <input type="radio" name="s" style="background-image: url('assets/pastphotos/p02.jpg');" title="Mirpur PK 2020">
+            <input type="radio" name="s" style="background-image: url('assets/pastphotos/p01.jpg');" title="Jhelum PK 2019">
 
         </i>
 
