--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
               <li>[J.6] <strong>Muhammad Raees,</strong> Inge Meijerink, Ioanna Lykourentzou, Vassilis-Javed Khan, and Konstantinos Papangelis, 2024. <a target="_blank" href="https://doi.org/10.1016/j.ijhcs.2024.103301">"From explainable to interactive AI: A literature review on current trends in human-AI interaction"</a>. In <a target="_blank" href="https://www.sciencedirect.com/journal/international-journal-of-human-computer-studies">International Journal of Human-Computer Studies</a>. [<a target="_blank" href="assets/pdf/exp_inter.pdf">Pre-print</a>]</li>
               <li>[C.2] <strong>Muhammad Raees,</strong> Vassilis-Javed Khan, and Konstantinos Papangelis, 2023. <a target="_blank" href="https://dl.acm.org/doi/pdf/10.1145/3544549.3585788">"Four Challenges for IML Designers: Lessons of an Interactive Customer Segmentation Prototype in a Global Manufacturing Company"</a>. In Extended Abstracts of the 2023 CHI Conference on Human Factors in Computing Systems (CHI EA 23). <i>(32% acceptance rate)</i></li>
               <li>[C.1] Sehrish Manzoor, Nouman Ali, <strong>Muhammad Raees,</strong>  Khan Awais Khan, Muhammad Usama Ayub, Afzal Ahmed, 2022. <a target="_blank" href="https://ceur-ws.org/Vol-3266/paper2.pdf">"Ancient coin classification based on recent trends of deep learning"</a>. In VIPERC2022: 1st International Virtual Conference on Visual Pattern Extraction and Recognition for Cultural Heritage Understanding. <i>(41% acceptance rate)</i></li>
-              <li>[J.5] KA Khan, SH Dar, S Fazilat, <strong>Muhammad Raees,</strong>, S Manzoor, MU Ayub, A Ahmed, 2022. <a target="_blank" href="http://www.sci-int.com/pdf/637934373728498581.edited.pdf">"An intelligent sentiment analysis system based on recent trends in machine learning"</a>. In Science International, Issue 34.3.</li>
+              <li>[J.5] KA Khan, SH Dar, S Fazilat, <strong>Muhammad Raees,</strong> S Manzoor, MU Ayub, A Ahmed, 2022. <a target="_blank" href="http://www.sci-int.com/pdf/637934373728498581.edited.pdf">"An intelligent sentiment analysis system based on recent trends in machine learning"</a>. In Science International, Issue 34.3.</li>
               <li>[J.4] <strong>Muhammad Raees,</strong> Tamim Ahmed Khan, Khurrum Mustafa Abbasi, Afzal Ahmed, Samina Fazilat, Inaam Ahmed, 2021. <a target="_blank" href="https://doi.org/10.1155/2021/8835859">"Context-Aware Services Using MANETs for Long-Distance Vehicular Systems: A Cognitive Agent-Based Model"</a>. In Scientific Programming</li>
               <li>[J.3] <strong>Muhammad Raees,</strong> 2020. <a target="_blank" href="https://www.proquest.com/docview/2442968004">"Study of Software Quality Improvement through Reliability Metrics Models and Root Cause Analysis Program"</a>. In International Journal of Computer Engineering and Information Technology. VOL. 12, NO. 5, May 2020, 42–47.</li>
               <li>[J.2] Saadat Hanif Dar, Jameel Ahmed, <strong>Muhammad Raees</strong>, 2016. <a target="_blank" href="https://pdfs.semanticscholar.org/56d9/099d0879e84b5783ffce6d44d2ca692d2810.pdf">"Characterization of flexible wearable antenna based on rubber substrate"</a>. In Int. J. Adv. Comput. Sci. Appl. IJACSA.</li>
@@ -189,12 +189,16 @@
         </div>
         <table>
           <tr>
+            <td><font color="#00b4d9">Aug 2025 </font></td>
+            <td>| Short Paper accepted at <a target="_blank" href="https://assets25.sigaccess.org/index.html">ACM Conference on Computers and Accessibility (ASSETS'25)</a></td>
+          </tr>
+          <tr>
             <td><font color="#00b4d9">Apr 2025 </font></td>
-            <td>| Paper (and 2 workshop papers) accepted at <a target="_blank" href="https://www.um.org/umap2025/">ACM International Conference on User Modeling, Adaptation and Personalization (UMAP'25)</a></td>
+            <td>| Paper (and 2 workshop papers) accepted at <a target="_blank" href="https://www.um.org/umap2025/">ACM Conference on User Modeling, Adaptation and Personalization (UMAP'25)</a></td>
           </tr>
           <tr>
             <td><font color="#00b4d9">Dec 2024 </font></td>
-            <td>| Case Study Paper accepted at <a target="_blank" href="https://chi2025.acm.org/">ACM Human Factors in Computing Systems (CHI'25)</a></td>
+            <td>| Case Study Paper accepted at <a target="_blank" href="https://chi2025.acm.org/">ACM Conference on Human Factors in Computing Systems (CHI'25)</a></td>
           </tr>
           <tr>
             <td><font color="#00b4d9">Aug 2024 </font></td>
@@ -211,7 +215,7 @@
           
           <tr>
             <td><font color="#00b4d9">Mar 2023 </font></td>
-            <td>| Paper accepted at <a target="_blank" href="https://chi2023.acm.org/">ACM Human Factors in Computing Systems (CHI'23)</a></td>
+            <td>| Paper accepted at <a target="_blank" href="https://chi2023.acm.org/">ACM Conference on Human Factors in Computing Systems (CHI'23)</a></td>
           </tr>
 
           <tr>
