--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <a target="_blank" href="https://www.linkedin.com/in/muhammad-raees-b6289954" class="linkedin"><i class="fab fa-linkedin"></i></a>
           <a target="_blank" href="https://github.com/raeeschaudhary" class="github"><i class="fab fa-github"></i></a>
           <a href="mailto:mraees@mail.rit.edu" class="email"><i class="fas fa-envelope"></i></a>
-          <a href="assets/pdf/MuhammadRaees_cv.pdf" class="cv">CV</a>
+          <!-- <a href="assets/pdf/MuhammadRaees_cv.pdf" class="cv">CV</a> -->
         </div>
       </div>
 
