--- a/viz_dash.html
+++ b/viz_dash.html
@@ -102,16 +102,16 @@
         <div class="portfolio-details-container">
 
           <div class="owl-carousel portfolio-details-carousel">
-            <img src="assets/img/portfolio/p1_1.jpg" class="img-fluid" alt="">
-            <img src="assets/img/portfolio/p1_3.png" class="img-fluid" alt="">
-            <img src="assets/img/portfolio/p1_4.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/p3_1.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/p3_2.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/p3_3.png" class="img-fluid" alt="">
           </div>
 
           <div class="portfolio-info">
             <h3>Project information</h3>
             <ul>
-              <li><strong>Category</strong>: Analytics design</li>
-              <li><strong>Project</strong>: Dynamic Allocation - Sappi</li>
+              <li><strong>Category</strong>: Dashboard Analytics</li>
+              <li><strong>Project</strong>: Multiple Data Analysis Dashboards</li>
               <!-- <li><strong>Project date</strong>: 01 March, 2020</li> -->
               <!-- <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li> -->
             </ul>
@@ -120,12 +120,12 @@
         </div>
 
         <div class="portfolio-description">
-          <h2>Dynamic Allocation and Analytics</h2>
+          <h2>Macro Economics Analytics Application</h2>
           <p>
-            This project streamlines the dynamic allocation problem with an interactive application to support salespeople in efficiently managing their 
-            allocation requests. This greatly reduces their time to manage daily allocation checks. It automates the allocation checks and provides a one-stop
-            solution for the allocation problem, saving thousands of dollars and work hours.
+            The portfolio dashboard showcases a collection of diverse projects, each targeting a different area of expertise or focus. 
+            It highlights a range of skills and solutions across various domains.
 
+            For more details and viewing dashboard projects view my <a href="https://public.tableau.com/app/profile/muhammad.raees/vizzes" target="_blank">Tableau Homepage</a>
           </p>
         </div>
 
