--- a/macro_analytics.html
+++ b/macro_analytics.html
@@ -102,16 +102,16 @@
         <div class="portfolio-details-container">
 
           <div class="owl-carousel portfolio-details-carousel">
-            <img src="assets/img/portfolio/p1_1.jpg" class="img-fluid" alt="">
-            <img src="assets/img/portfolio/p1_3.png" class="img-fluid" alt="">
-            <img src="assets/img/portfolio/p1_4.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/p2_1.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/p2_2.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/p2_3.png" class="img-fluid" alt="">
           </div>
 
           <div class="portfolio-info">
             <h3>Project information</h3>
             <ul>
-              <li><strong>Category</strong>: Analytics design</li>
-              <li><strong>Project</strong>: Dynamic Allocation - Sappi</li>
+              <li><strong>Category</strong>: Analytics Development</li>
+              <li><strong>Project</strong>: Advance Macro Analytics</li>
               <!-- <li><strong>Project date</strong>: 01 March, 2020</li> -->
               <!-- <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li> -->
             </ul>
@@ -120,12 +120,12 @@
         </div>
 
         <div class="portfolio-description">
-          <h2>Dynamic Allocation and Analytics</h2>
+          <h2>Macro Economics Analytics Application</h2>
           <p>
-            This project streamlines the dynamic allocation problem with an interactive application to support salespeople in efficiently managing their 
-            allocation requests. This greatly reduces their time to manage daily allocation checks. It automates the allocation checks and provides a one-stop
-            solution for the allocation problem, saving thousands of dollars and work hours.
+            This project provide cohesive macro analytics, helping users navigate the complex macroeconomic landscape. 
+            Analysis from advanced statistical techniques are used to identify and interpret key trends from the multitude of available data.
 
+            Analytics provide Global Banks Monitor, Recession, Hawk/Dove Index, Inflation Index, Unemployment Index, among many others.
           </p>
         </div>
 
